styles/css/index.css
 


        /*Valenberg from DeviantArt is the Source for the gifs.*/



body {
    padding-left: 50px;
    padding-right: 50px;
    padding-top: 20px;
    padding-bottom: 50px;
    font-family: 'Orbitron', sans-serif !important;
}

.pixelHead {
    height: 450px;
    background-image: url("../img/Valenberg.gif");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover; 
}

.colorHead {
    position: relative;
    top: 100px;
    background: rgba(22, 38, 64, .6);
    height: 250px;
}

.site {
    padding-top: 25px;
    text-align: center;
    font-size: 72px;
    font-weight: 700;
    color: #FFF;
    text-transform: uppercase;
    letter-spacing: 0.2em;
}

.internship {
    display: inline-block;
    padding:  0.2em 0.5em;
    border: #FFF solid 10px;
}

.kicker {
    font-size: 25px;
    font-weight: 700;
    color: #FFF;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.name {
    font-size: 14px;
    font-weight: 700;
    color: #FFF;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.downUnder {
    height: 200px;
    background-image: url("../img/Valenberg.gif");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover; 
}

.copyright {
    position: relative;
    top: 20px;
    padding:  0.2em 0.5em;
    border: #FFF solid 10px;
    font-size: 20px;
    font-weight: 700;
    color: #FFF;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.titleText {
    font-size: 50px;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #453671;
}

.nextPage {
        text-align: center;
}

.nextClick a {
    text-decoration: none;
    color: #FFF;
}

.nextClick a:hover {
    color: #FFF;
    text-decoration: none;
}

.nextClick {
    border: #453671 solid 10px; 
    border-radius: 50%;
    background-color: #453671;
    color: #FFF;
    font-size: 20px;
    letter-spacing: 5px;
    text-transform: uppercase;
    margin-bottom: 50px;
}



                            /*Start CIRCLES*/


.ch-grid {
    margin: 20px 0 0 0;
    padding: 0;
    list-style: none;
    display: block;
    text-align: center;
    width: 100%;
}

.ch-grid:after,
.ch-item:before {
    content: '';
    display: table;
}

.ch-grid:after {
    clear: both;
}

.ch-grid li {
    width: 350px;
    height: 350px;
    display: inline-block;
    margin: 100px;
}

.ch-item {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    overflow: hidden;
    position: relative;
    cursor: default;
    box-shadow: 
        inset 0 0 0 16px rgba(255,255,255,0.6),
        0 1px 2px rgba(0,0,0,0.1);
    transition: all 0.4s ease-in-out;
}

.ch-img-1 { 
    background-image: url("../img/technoIcon.gif");
    background-repeat: no-repeat;
    background-size: contain;
}

.ch-img-2 { 
    background-image: url("../img/city.gif");
    background-repeat: no-repeat;
    background-size: contain;
}

.ch-img-3 { 
    background-image: url("../img/rain.gif");
    background-repeat: no-repeat;
    background-size: contain;
}

.ch-info {
    position: absolute;
    background: rgba(22, 38, 64, 0.8);
    width: inherit;
    height: inherit;
    border-radius: 50%;
    overflow: hidden;
    opacity: 0;
    transition: all 0.4s ease-in-out;
    transform: scale(0);
}

.ch-info h3 {
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 45px;
    margin: 0 30px;
    padding: 45px 0 0 0;
    height: 140px;
    font-family: 'Open Sans', Arial, sans-serif;
    text-shadow: 
        0 0 1px #fff, 
        0 1px 2px rgba(0,0,0,0.3);
}

.ch-info p {
    color: #fff;
    padding: 20px 5px;
    font-style: italic;
    margin: 0 30px;
    font-size: 30px;
    border-top: 1px solid rgba(255,255,255,0.5);
    opacity: 0;
    transition: all 1s ease-in-out 0.4s;
}

.ch-info p a {
    display: block;
    color: rgba(255,255,255,0.7);
    font-style: normal;
    font-weight: 700;
    text-transform: uppercase;
    font-size: 9px;
    letter-spacing: 1px;
    padding-top: 4px;
    font-family: 'Open Sans', Arial, sans-serif;
}

.ch-info p a:hover {
    color: rgba(255,242,34, 0.8);
}

.ch-item:hover {
    box-shadow: 
        inset 0 0 0 1px rgba(255,255,255,0.1),
        0 1px 2px rgba(0,0,0,0.1);
}

.ch-item:hover .ch-info {
    transform: scale(1);
    opacity: 1;
}

.ch-item:hover .ch-info p {
    opacity: 1;
}


                            /* End CIRCLES*/

                            /*Start ANIMATION TYPING*/


.cd-intro {
  width: 90%;
  max-width: 768px;
  text-align: center;
}

.cd-intro {
  margin: 4em auto;
}
@media only screen and (min-width: 768px) {
  .cd-intro {
    margin: 5em auto;
  }
}
@media only screen and (min-width: 1170px) {
  .cd-intro {
    margin: 6em auto;
  }
}

.cd-headline {
  font-size: 3rem;
  line-height: 1.2;
}
@media only screen and (min-width: 768px) {
  .cd-headline {
    font-size: 4.4rem;
    font-weight: 300;
  }
}
@media only screen and (min-width: 1170px) {
  .cd-headline {
    font-size: 6rem;
  }
}

.cd-words-wrapper {
  display: inline-block;
  position: relative;
  text-align: left;
}
.cd-words-wrapper b {
  display: inline-block;
  position: absolute;
  white-space: nowrap;
  left: 0;
  top: 0;
}
.cd-words-wrapper b.is-visible {
  position: relative;
}
.no-js .cd-words-wrapper b {
  opacity: 0;
}
.no-js .cd-words-wrapper b.is-visible {
  opacity: 1;
}


          /* -------------------------------- 

          xtype 

          -------------------------------- */
.cd-headline.type .cd-words-wrapper {
  vertical-align: top;
  overflow: hidden;
}
.cd-headline.type .cd-words-wrapper::after {
  /* vertical bar */
  content: '';
  position: absolute;
  right: 0;
  top: 50%;
  bottom: auto;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 90%;
  width: 1px;
  background-color: #aebcb9;
}
.cd-headline.type .cd-words-wrapper.waiting::after {
  -webkit-animation: cd-pulse 1s infinite;
  -moz-animation: cd-pulse 1s infinite;
  animation: cd-pulse 1s infinite;
}
.cd-headline.type .cd-words-wrapper.selected {
  background-color: #aebcb9;
}
.cd-headline.type .cd-words-wrapper.selected::after {
  visibility: hidden;
}
.cd-headline.type .cd-words-wrapper.selected b {
  color: #0d0d0d;
}
.cd-headline.type b {
  visibility: hidden;
}
.cd-headline.type b.is-visible {
  visibility: visible;
}
.cd-headline.type i {
  position: absolute;
  visibility: hidden;
  color: #C654CE;
}
.cd-headline.type i.in {
  position: relative;
  visibility: visible;
}

@-webkit-keyframes cd-pulse {
  0% {
    -webkit-transform: translateY(-50%) scale(1);
    opacity: 1;
  }
  40% {
    -webkit-transform: translateY(-50%) scale(0.9);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(-50%) scale(0);
    opacity: 0;
  }
}
@-moz-keyframes cd-pulse {
  0% {
    -moz-transform: translateY(-50%) scale(1);
    opacity: 1;
  }
  40% {
    -moz-transform: translateY(-50%) scale(0.9);
    opacity: 0;
  }
  100% {
    -moz-transform: translateY(-50%) scale(0);
    opacity: 0;
  }
}
@keyframes cd-pulse {
  0% {
    -webkit-transform: translateY(-50%) scale(1);
    -moz-transform: translateY(-50%) scale(1);
    -ms-transform: translateY(-50%) scale(1);
    -o-transform: translateY(-50%) scale(1);
    transform: translateY(-50%) scale(1);
    opacity: 1;
  }
  40% {
    -webkit-transform: translateY(-50%) scale(0.9);
    -moz-transform: translateY(-50%) scale(0.9);
    -ms-transform: translateY(-50%) scale(0.9);
    -o-transform: translateY(-50%) scale(0.9);
    transform: translateY(-50%) scale(0.9);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(-50%) scale(0);
    -moz-transform: translateY(-50%) scale(0);
    -ms-transform: translateY(-50%) scale(0);
    -o-transform: translateY(-50%) scale(0);
    transform: translateY(-50%) scale(0);
    opacity: 0;
  }
}

                           /* End ANIMATION TYPING*/


.meme {
    color: #C654CE;
}

.info {
    font-size: 45px;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 25px;
}

.totalFoot {
    position: relative;
    top: 50px;
    background: rgba(22, 38, 64, .6);
    height: 100px;
}

